logregression used as classifier, 0.81 f1

--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -46,7 +46,16 @@
         "id": "HFtBxSL40CG9",
         "outputId": "49e0c805-cd5f-4d4b-be20-2cf551c8bc86"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q1: Which statement is **true** regarding **precision** in a multi-class classification context? (1 point)\n",
+            "Answer: Precision is the fraction of predicted positives that are actual positives\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q1():\n",
         "    \"\"\"\n",
@@ -60,7 +69,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q1: Which statement is **true** regarding **precision** in a multi-class classification context? (1 point)\\nAnswer: {answer_q1()}')"
       ]
@@ -80,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,7 +97,16 @@
         "id": "uFto7n3ny7UA",
         "outputId": "2025056d-b701-4a72-89b4-7a459c2828b6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q2: Which statement correctly describes the confusion matrix in a multi-class setting?\n",
+            "Answer: It’s an NxN array for N classes, comparing predicted vs. actual class labels\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q2():\n",
         "    \"\"\"\n",
@@ -102,7 +120,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q2: Which statement correctly describes the confusion matrix in a multi-class setting?\\nAnswer: {answer_q2()}')"
       ]
@@ -122,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -130,7 +148,16 @@
         "id": "c5SAsK9C2Z8R",
         "outputId": "edd20aeb-bf1e-4fcf-fd84-17c8e39a92a6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q3: Which classifier typically uses bagging plus random subsets of features to reduce variance?\n",
+            "Answer: Random Forest\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q3():\n",
         "    \"\"\"\n",
@@ -144,7 +171,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q3: Which classifier typically uses bagging plus random subsets of features to reduce variance?\\nAnswer: {answer_q3()}')"
       ]
@@ -162,9 +189,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Q3: If we see a high recall but low precision for a certain class, what does that usually imply?\n",
+            "Answer: The model finds most actual positives (few false negatives), but also mislabels many negatives as that class (many false positives)\n"
+          ]
+        }
+      ],
       "source": [
         "def answer_q4():\n",
         "    \"\"\"\n",
@@ -178,7 +214,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[REPLACE_WITH_CORRECT_OPTION_NUMBER]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q3: If we see a high recall but low precision for a certain class, what does that usually imply?\\nAnswer: {answer_q4()}')"
       ]
@@ -214,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -223,7 +259,8 @@
         "import pandas as pd\n",
         "from sklearn.preprocessing import OneHotEncoder, LabelEncoder\n",
         "from sklearn.model_selection import train_test_split\n",
-        "# from sklearn.ensemble import RandomForestClassifier -> Choose your classifier\n",
+        "from sklearn.ensemble import RandomForestClassifier \n",
+        "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import precision_score, recall_score\n",
         "from sklearn.metrics import classification_report, confusion_matrix"
       ]
@@ -244,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
@@ -257,6 +294,19 @@
         "    3) map class to {0,1,2,3}\n",
         "    4) return X, y\n",
         "    \"\"\"\n",
+        "\n",
+        "    df = pd.read_csv('car.csv')\n",
+        "\n",
+        "# this is encoding them to numeric\n",
+        "    le = LabelEncoder()\n",
+        "    the_data_encoded = df.apply(le.fit_transform)\n",
+        "\n",
+        "    class_mapping = {label: i for i, label in enumerate(df['class'].unique())}\n",
+        "    \n",
+        "    X = the_data_encoded.drop('class', axis=1)\n",
+        "    y = df['class'].map(class_mapping)\n",
+        "    return X, y\n",
+        "\n",
         "    # TODO\n",
         "    pass\n",
         "\n",
@@ -264,6 +314,51 @@
         "# X, y = load_and_encode_car_data()\n",
         "# print(\"Shapes:\", X.shape, y.shape)\n",
         "pass"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 67,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "buying      0\n",
+            "maint       0\n",
+            "doors       0\n",
+            "persons     0\n",
+            "lug_boot    0\n",
+            "safety      0\n",
+            "dtype: int64\n",
+            "Shapes: (1728, 6) (1728,)\n",
+            "      buying  maint  doors  persons  lug_boot  safety\n",
+            "1723       1      1      3        2         1       2\n",
+            "1724       1      1      3        2         1       0\n",
+            "1725       1      1      3        2         0       1\n",
+            "1726       1      1      3        2         0       2\n",
+            "1727       1      1      3        2         0       0\n",
+            "1723    3\n",
+            "1724    2\n",
+            "1725    0\n",
+            "1726    3\n",
+            "1727    2\n",
+            "Name: class, dtype: int64\n"
+          ]
+        }
+      ],
+      "source": [
+        "X, y = load_and_encode_car_data()\n",
+        "\n",
+        "empty = X.isna().sum()\n",
+        "print(empty)\n",
+        "print(\"Shapes:\", X.shape, y.shape)\n",
+        "\n",
+        "\n",
+        "print(X.tail())\n",
+        "\n",
+        "print(y.tail())"
       ]
     },
     {
@@ -282,7 +377,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 68,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -291,10 +386,20 @@
         "def train_classifier(X, y):\n",
         "    \"\"\"\n",
         "    1. split X,y\n",
-        "    2. pick a classifier\n",
+        "    2. pick a naive bayes classifier\n",
         "    3. fit & predict \n",
         "    4. return (model, X_test, y_test, y_pred)\n",
         "    \"\"\"\n",
+        "\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "    myclassifiermodel = LogisticRegression()    \n",
+        "\n",
+        "    myclassifiermodel.fit(X_train, y_train)\n",
+        "\n",
+        "    y_pred = myclassifiermodel.predict(X_test)\n",
+        "\n",
+        "    return myclassifiermodel, X_test, y_test, y_pred\n",
         "    # TODO\n",
         "    pass"
       ]
@@ -311,7 +416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -319,6 +424,7 @@
         "    \"\"\"\n",
         "    Return confusion_matrix array (sklearn).\n",
         "    \"\"\"\n",
+        "    return confusion_matrix(y_true, y_pred)\n",
         "    # TODO\n",
         "    pass"
       ]
@@ -339,7 +445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 70,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -349,6 +455,16 @@
         "    2) compute f1 score manually\n",
         "    return that float\n",
         "    \"\"\"\n",
+        "\n",
+        "    precision = precision_score(y_true, y_pred, average=None)[class_idx]\n",
+        "\n",
+        "    recall = recall_score(y_true, y_pred, average=None)[class_idx]\n",
+        "\n",
+        "    # wiki says f1 is two by precision by recall over precision n recall\n",
+        "    f1 = 2 * (precision * recall) / (precision + recall)\n",
+        "\n",
+        "    return f1\n",
+        "\n",
         "    # TODO\n",
         "    pass"
       ]
@@ -368,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -377,6 +493,8 @@
         "    calls sklearn's classification_report\n",
         "    returns it\n",
         "    \"\"\"\n",
+        "\n",
+        "    return classification_report(y_true, y_pred)\n",
         "    # TODO\n",
         "    pass\n",
         "\n",
@@ -392,6 +510,61 @@
         "# rep = generate_classification_report(y_te, y_pr)\n",
         "# print(rep)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 72,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Generate confmatrix:\n",
+            "[[217  17   1   0]\n",
+            " [ 69  11   3   0]\n",
+            " [  5  12   0   0]\n",
+            " [  9   2   0   0]]\n",
+            "F1 for class 0 manually: 0.8112149532710281\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.72      0.92      0.81       235\n",
+            "           1       0.26      0.13      0.18        83\n",
+            "           2       0.00      0.00      0.00        17\n",
+            "           3       0.00      0.00      0.00        11\n",
+            "\n",
+            "    accuracy                           0.66       346\n",
+            "   macro avg       0.25      0.26      0.25       346\n",
+            "weighted avg       0.55      0.66      0.59       346\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+          ]
+        }
+      ],
+      "source": [
+        "X, y = load_and_encode_car_data()\n",
+        "model, X_te, y_te, y_pr = train_classifier(X,y)\n",
+        "print(\"Generate confmatrix:\")\n",
+        "cm = generate_confmatrix(y_te, y_pr)\n",
+        "print(cm)\n",
+        "f1class0 = manual_f1_for_class(y_te, y_pr, class_idx=0)\n",
+        "print(\"F1 for class 0 manually:\", f1class0)\n",
+        "rep = generate_classification_report(y_te, y_pr)\n",
+        "print(rep)"
+      ]
     }
   ],
   "metadata": {
@@ -399,7 +572,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "ise",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -413,7 +586,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.6"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
