Encoding 6 features with one hot rather than label encoding

--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 128,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 129,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 130,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -189,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 131,
       "metadata": {},
       "outputs": [
         {
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 132,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 133,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
@@ -290,75 +290,72 @@
         "def load_and_encode_car_data():\n",
         "    \"\"\"\n",
         "    1) read 'car.csv'\n",
-        "    2) encode the 6 features to numeric or one-hot\n",
-        "    3) map class to {0,1,2,3}\n",
-        "    4) return X, y\n",
+        "    2) encode the 6 features with one-hot, excluding the class column\n",
+        "    3) map class to {0,1,2,3}, unacc=0, acc=1, good=2, vgood=3\n",
+        "    4) return X, y as arrays\n",
         "    \"\"\"\n",
         "\n",
         "    df = pd.read_csv('car.csv')\n",
         "\n",
-        "# this is encoding them to numeric\n",
-        "    le = LabelEncoder()\n",
-        "    the_data_encoded = df.apply(le.fit_transform)\n",
+        "    encoder = OneHotEncoder()\n",
         "\n",
-        "    class_mapping = {label: i for i, label in enumerate(df['class'].unique())}\n",
-        "    \n",
-        "    X = the_data_encoded.drop('class', axis=1)\n",
-        "    y = df['class'].map(class_mapping)\n",
+        "    X = encoder.fit_transform(df.iloc[:, :-1]).toarray()\n",
+        "\n",
+        "    # encoding only class column\n",
+        "    le = LabelEncoder()\n",
+        "    y = le.fit_transform(df.iloc[:, -1])\n",
+        "\n",
+        "    # print(X.head())\n",
+        "    # print(y.head())\n",
+        "\n",
         "    return X, y\n",
         "\n",
         "    # TODO\n",
         "    pass\n",
         "\n",
-        "# demonstration\n",
-        "# X, y = load_and_encode_car_data()\n",
-        "# print(\"Shapes:\", X.shape, y.shape)\n",
+        "\n",
         "pass"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 134,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "buying      0\n",
-            "maint       0\n",
-            "doors       0\n",
-            "persons     0\n",
-            "lug_boot    0\n",
-            "safety      0\n",
-            "dtype: int64\n",
-            "Shapes: (1728, 6) (1728,)\n",
-            "      buying  maint  doors  persons  lug_boot  safety\n",
-            "1723       1      1      3        2         1       2\n",
-            "1724       1      1      3        2         1       0\n",
-            "1725       1      1      3        2         0       1\n",
-            "1726       1      1      3        2         0       2\n",
-            "1727       1      1      3        2         0       0\n",
-            "1723    3\n",
-            "1724    2\n",
-            "1725    0\n",
-            "1726    3\n",
-            "1727    2\n",
-            "Name: class, dtype: int64\n"
+            "[[0. 0. 0. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 0. 1. 0. 1. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 0. 1. 0. 0. 1.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 0. 1. 1. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 1. 0. 0. 1. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 1. 0. 0. 0. 1.]]\n",
+            "[2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2]\n",
+            "Shapes: (1728, 21) (1728,)\n"
           ]
         }
       ],
       "source": [
         "X, y = load_and_encode_car_data()\n",
         "\n",
-        "empty = X.isna().sum()\n",
-        "print(empty)\n",
+        "\n",
+        "print(X[:5])\n",
+        "print(y[:222])\n",
+        "\n",
+        "# empty = X.isna().sum()\n",
+        "# print(empty)\n",
         "print(\"Shapes:\", X.shape, y.shape)\n",
         "\n",
         "\n",
-        "print(X.tail())\n",
+        "# print(X.tail())\n",
         "\n",
-        "print(y.tail())"
+        "# print(y.tail())"
       ]
     },
     {
@@ -377,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 135,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -416,7 +413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 136,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -445,7 +442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 137,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -484,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 138,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -513,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 139,
       "metadata": {},
       "outputs": [
         {
@@ -521,36 +518,22 @@
           "output_type": "stream",
           "text": [
             "Generate confmatrix:\n",
-            "[[217  17   1   0]\n",
-            " [ 69  11   3   0]\n",
-            " [  5  12   0   0]\n",
-            " [  9   2   0   0]]\n",
-            "F1 for class 0 manually: 0.8112149532710281\n",
+            "[[ 68   6   9   0]\n",
+            " [  4   6   0   1]\n",
+            " [  7   0 228   0]\n",
+            " [  2   0   0  15]]\n",
+            "F1 for class 0 manually: 0.8292682926829269\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.72      0.92      0.81       235\n",
-            "           1       0.26      0.13      0.18        83\n",
-            "           2       0.00      0.00      0.00        17\n",
-            "           3       0.00      0.00      0.00        11\n",
+            "           0       0.84      0.82      0.83        83\n",
+            "           1       0.50      0.55      0.52        11\n",
+            "           2       0.96      0.97      0.97       235\n",
+            "           3       0.94      0.88      0.91        17\n",
             "\n",
-            "    accuracy                           0.66       346\n",
-            "   macro avg       0.25      0.26      0.25       346\n",
-            "weighted avg       0.55      0.66      0.59       346\n",
+            "    accuracy                           0.92       346\n",
+            "   macro avg       0.81      0.80      0.81       346\n",
+            "weighted avg       0.92      0.92      0.92       346\n",
             "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-            "/home/codespace/.local/lib/python3.12/site-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
           ]
         }
       ],
