final submission, properly encodes data

--- a/challenge-3.ipynb
+++ b/challenge-3.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 153,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 154,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,7 +140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 155,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -189,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 156,
       "metadata": {},
       "outputs": [
         {
@@ -250,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 132,
+      "execution_count": 157,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 158,
       "metadata": {
         "id": "Cm3MG7iySn15"
       },
@@ -305,9 +305,6 @@
         "    le = LabelEncoder()\n",
         "    y = le.fit_transform(df.iloc[:, -1])\n",
         "\n",
-        "    # print(X.head())\n",
-        "    # print(y.head())\n",
-        "\n",
         "    return X, y\n",
         "\n",
         "    # TODO\n",
@@ -315,47 +312,6 @@
         "\n",
         "\n",
         "pass"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 134,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[[0. 0. 0. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 0. 1. 0. 1. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 0. 1. 0. 0. 1.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 0. 1. 1. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 1. 0. 0. 1. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 1. 0. 0. 0. 1.]]\n",
-            "[2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
-            " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2]\n",
-            "Shapes: (1728, 21) (1728,)\n"
-          ]
-        }
-      ],
-      "source": [
-        "X, y = load_and_encode_car_data()\n",
-        "\n",
-        "\n",
-        "print(X[:5])\n",
-        "print(y[:222])\n",
-        "\n",
-        "# empty = X.isna().sum()\n",
-        "# print(empty)\n",
-        "print(\"Shapes:\", X.shape, y.shape)\n",
-        "\n",
-        "\n",
-        "# print(X.tail())\n",
-        "\n",
-        "# print(y.tail())"
       ]
     },
     {
@@ -374,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 135,
+      "execution_count": 159,
       "metadata": {
         "id": "t6L9tk63SxuZ"
       },
@@ -413,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 136,
+      "execution_count": 160,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -442,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 161,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -457,7 +413,7 @@
         "\n",
         "    recall = recall_score(y_true, y_pred, average=None)[class_idx]\n",
         "\n",
-        "    # wiki says f1 is two by precision by recall over precision n recall\n",
+        "    # wiki says f1 is two by precision by recall over precision and recall\n",
         "    f1 = 2 * (precision * recall) / (precision + recall)\n",
         "\n",
         "    return f1\n",
@@ -481,7 +437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 138,
+      "execution_count": 162,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -510,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": 163,
       "metadata": {},
       "outputs": [
         {
